# agent-sdk-wrapper

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: auditor-style-example.md  trace-viewer.html
docs/schemas/: agent-sdk-wrapper.event-envelope-jsonl.v1.schema.json  agent-sdk-wrapper.manifest.v1.schema.json  agent-sdk-wrapper.run-result.v1.schema.json
examples/: _shared.py  auditor_mcp_server.py  auditor_style.py  custom_tools.py  run_basic.py  stream.py  structured_output.py  subagent.py
scripts/: regenerate_fixtures.py
src/agent_sdk_wrapper/: __init__.py  agent.py  artifacts.py  cli.py  errors.py  events.py  logging.py  mcp.py  request.py  structured.py  testing.py  tools.py
src/agent_sdk_wrapper/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: test_agent_retry.py  test_anthropic_provider.py  test_artifact_schemas.py  test_auditor_style_example.py  test_cli.py  test_events.py  test_examples_offline.py  test_fixture_generation.py  test_live_integration.py  test_openai_provider.py  test_tools.py  test_trace_replay.py  test_trace_viewer.py
tests/fixtures/: simple_mcp_server.py
tests/fixtures/traces/: live-anthropic-basic.trace.jsonl  live-codex-basic.trace.jsonl  provider_error.trace.jsonl  retry.trace.jsonl  stream.trace.jsonl  structured_output.trace.jsonl  success.trace.jsonl  tool_call.trace.jsonl
