[project]
name = "agent-sdk-wrapper"
version = "0.1.0"
description = "A thin, unified wrapper over the Claude Agent SDK and the OpenAI Codex SDK."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"

dependencies = [
    "claude-agent-sdk==0.2.87",
    "openai-codex==0.1.0b2",
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/bgrins/agent-sdk-wrapper"
Repository = "https://github.com/bgrins/agent-sdk-wrapper"
Issues = "https://github.com/bgrins/agent-sdk-wrapper/issues"

[project.scripts]
agent-sdk-wrapper = "agent_sdk_wrapper.cli:main"

[project.optional-dependencies]
dev = [
    "jsonschema>=4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.uv]
override-dependencies = [
    # openai-codex 0.1.0b2 pins 0.132.0, which has no glibc Linux wheel.
    "openai-codex-cli-bin==0.136.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sdk_wrapper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live provider tests; run through docker compose integration",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
